# vg

./: .gitignore  Cargo.toml  shell.nix
assets/fonts/: Trigram-LICENSE
assets/models/: eyelegger.glb  eyelegger.gltf
nix/: pkgs.nix
src/: .main.rs.swp  camera.rs  events.rs  lib.rs  main.rs  main_big_field_test.rs  main_first.rs  main_forth.rs  main_fourth.rs  main_old.rs  main_second.rs
src/cam/: focus.rs  mod.rs  orbit.rs  ray.rs
src/control/: hover.rs  mod.rs  movement.rs  select.rs  types.rs
src/physics/: mod.rs
src/ui/: button.rs  main_menu.rs  main_menu_test.rs  menu_control.rs  mod.rs  stats.rs  unit_bar.rs
src/ui/buttons/: mod.rs  rules.rs  systems.rs  types.rs
src/units/: ball.rs  eyelegger.rs  mod.rs
src/world/: mod.rs  ship.rs
