
[package]
name = "voidgrinder11"
version = "0.1.0"
authors = ["nazgull08 <nazgull08@protonmail.com"]
edition = "2021"


[[bin]]
name = "voidgrinder"
path = "src/main.rs"

[dependencies]
log = { version = "^0.4.17"}
bevy = "0.9" 
bevy_rapier3d = "0.20.0"
bevy_flycam = "0.9.0"
bevy_atmosphere = "0.5.0"
nalgebra = "0.32.1"
rand = "0.8.5"

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
