
[package]
name = "voidgrinder"
version = "0.1.11"
authors = ["nazgull08 <nazgull08@protonmail.com"]
edition = "2021"


[[bin]]
name = "voidgrinder"
path = "src/main.rs"

[dependencies]
log = { version = "^0.4.17"}
bevy = "0.11.0" 
bevy_rapier3d = "0.22.0"
bevy_flycam = "0.10.1"
bevy_atmosphere = "0.6.0"
nalgebra = "0.32.3"
rand = "0.8.5"

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
